add  remove user token   #34
